complete mapping rename and some stage loading adjustments doesnt compile because of mappings idk why